# oca-edi

./: README.md
odoo-bringout-oca-edi-account_einvoice_generate/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_einvoice_generate/doc/: CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  USAGE.md
odoo-bringout-oca-edi-account_invoice_edifact/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_edifact/doc/: CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-edi-account_invoice_export/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_export/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  OVERVIEW.md
odoo-bringout-oca-edi-account_invoice_export_job/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_export_job/doc/: DEPENDENCIES.md  INSTALL.md  OVERVIEW.md
odoo-bringout-oca-edi-account_invoice_facturx/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_facturx/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-edi-account_invoice_facturx_py3o/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_facturx_py3o/doc/: DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md
odoo-bringout-oca-edi-account_invoice_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-account_invoice_ubl/doc/: ARCHITECTURE.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  USAGE.md
odoo-bringout-oca-edi-base_business_document_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_business_document_import/doc/: CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md
odoo-bringout-oca-edi-base_business_document_import_phone/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_business_document_import_phone/doc/: DEPENDENCIES.md  INSTALL.md  MODELS.md  USAGE.md
odoo-bringout-oca-edi-base_ebill_payment_contract/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_ebill_payment_contract/doc/: DEPENDENCIES.md  INSTALL.md  MODELS.md
odoo-bringout-oca-edi-base_edi/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_edi/doc/: CONFIGURATION.md  INSTALL.md  OVERVIEW.md  SECURITY.md
odoo-bringout-oca-edi-base_edifact/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_edifact/doc/: CONFIGURATION.md  DEPENDENCIES.md  INSTALL.md  MODELS.md  USAGE.md
odoo-bringout-oca-edi-base_facturx/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_facturx/doc/: ARCHITECTURE.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-edi-base_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_ubl/doc/: ARCHITECTURE.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-edi-base_ubl_payment/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_ubl_payment/doc/: CONFIGURATION.md  INSTALL.md  OVERVIEW.md
odoo-bringout-oca-edi-base_wamas_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-base_wamas_ubl/base_wamas_ubl/: __manifest__.py
odoo-bringout-oca-edi-base_wamas_ubl/doc/: CONFIGURATION.md  DEPENDENCIES.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-edi-despatch_advice_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-despatch_advice_import/doc/: CONFIGURATION.md  DEPENDENCIES.md  INSTALL.md  MODELS.md  SECURITY.md  WIZARDS.md
odoo-bringout-oca-edi-despatch_advice_import_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_einvoice_generate/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_edifact/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_export/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_export_job/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_facturx/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_facturx_py3o/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-account_invoice_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_business_document_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_business_document_import/doc/: ARCHITECTURE.md  DEPENDENCIES.md  INSTALL.md  USAGE.md
odoo-bringout-oca-edi-framework-base_business_document_import_phone/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_business_document_import_phone/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  OVERVIEW.md
odoo-bringout-oca-edi-framework-base_ebill_payment_contract/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_edi/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_edifact/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_facturx/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_ubl_payment/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-base_ubl_payment/doc/: ARCHITECTURE.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  USAGE.md
odoo-bringout-oca-edi-framework-base_wamas_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-despatch_advice_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-despatch_advice_import_ubl/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-pdf_helper/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-sale_order_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-sale_order_import_edifact/: README.md  pyproject.toml
odoo-bringout-oca-edi-framework-sale_order_import_edifact/doc/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  MODELS.md  WIZARDS.md
odoo-bringout-oca-edi-framework-sale_order_import_edifact/sale_order_import_edifact/i18n/: bs.po
odoo-bringout-oca-edi-pdf_helper/: README.md  pyproject.toml
odoo-bringout-oca-edi-sale_order_import/: README.md  pyproject.toml
odoo-bringout-oca-edi-sale_order_import_edifact/: README.md  pyproject.toml
(+123 files in other folders)
